--- a/style.css
+++ b/style.css
@@ -14,8 +14,11 @@
   --bg-modal-box-borde: #16161790;
   --bg-modal-box-borde: #fff1;
 
-  --transition-s: 0.24s cubic-bezier(0, 0, 0.5, 1);
+  /* --transition-s: 0.24s cubic-bezier(0, 0, 0.5, 1);
   --transition-m: 0.3s cubic-bezier(0, 0, 0.5, 1);
+  --transition-xl: 0.24s cubic-bezier(0.4, 0, 0.6, 1); */
+  --transition-s: 0.24s cubic-bezier(0, 0, 1, 1);
+  --transition-m: 0.3s cubic-bezier(0.42, 0, 0.58, 1);
   --transition-xl: 0.24s cubic-bezier(0.4, 0, 0.6, 1);
 
   --font: "Inter", Helvetica, sans-serif;
@@ -873,6 +876,7 @@ main > section {
         margin: 1rem 0.5rem;
         display: flex;
         align-items: end;
+        overflow: hidden;
         border-radius: 0.5rem;
         aspect-ratio: 16/9;
         background-position: center;
@@ -889,18 +893,19 @@ main > section {
         &:last-child {
           background-image: url(assets/12\ Add\ Card\ Shopping.webp);
         }
-        .box-title {
+        .link-title {
           width: 100%;
           padding: 1rem;
           background-color: #0008;
           color: #f8f9fc;
-          backdrop-filter: blur(8px) saturate(180%);
-          border-radius: 0 0 0.5rem 0.5rem;
+          opacity: 1;
+          transition: all var(--transition-m);
 
-          & a {
-            color: #f5f5f7;
-            font-weight: 600;
-            text-decoration: none;
+          &:hover {
+            backdrop-filter: blur(8px) saturate(180%);
+            opacity: 1;
+            color: #fff;
+            text-shadow: 0 0 5px black;
           }
         }
       }
@@ -929,7 +934,62 @@ main > section {
     }
   }
 }
+/* 
+"better-comments.tags": [
+    {
+      "tag": "!",
+      "color": "#ff3b30",
+      "strikethrough": false,
+      "underline": false,
+      "backgroundColor": "transparent",
+      "bold": false,
+      "italic": false
+    },
+    {
+      "tag": "?",
+      "color": "#3498DB",
+      "strikethrough": false,
+      "underline": false,
+      "backgroundColor": "transparent",
+      "bold": false,
+      "italic": false
+    },
+    {
+      "tag": "//",
+      "color": "#474747",
+      "strikethrough": true,
+      "underline": false,
+      "backgroundColor": "transparent",
+      "bold": false,
+      "italic": false
+    },
+    {
+      "tag": "todo",
+      "color": "#FF8C00",
+      "strikethrough": false,
+      "underline": false,
+      "backgroundColor": "transparent",
+      "bold": false,
+      "italic": false
+    },
+    {
+      "tag": "*",
+      "color": "#98C379",
+      "strikethrough": false,
+      "underline": false,
+      "backgroundColor": "transparent",
+      "bold": false,
+      "italic": false
+    }
+  ],
+ */
 
+/*! RED  */
+/*TODO ORANGE  */
+/*? BLUE  */
+/*$1 CYAN  */
+/*$2 YELLOW  */
+/*$3 LIME  */
 /* ***** apk ***** */
 
 .calculator {
@@ -942,7 +1002,7 @@ main > section {
     overflow: hidden;
     height: 97px;
     padding-top: 0.5rem;
-    color: #17f;
+    color: #1177ff;
     text-shadow: 0 0 5px #000;
     font-size: 1.5rem;
     text-align: right;
