--- a/style.css
+++ b/style.css
@@ -902,7 +902,7 @@ main > section {
 
         &:first-child {
           margin-top: 0.5rem;
-          background-image: url(assets/slider-crazy-effects0.png);
+          background-image: url(assets/reloj-serie.png);
         }
         &:nth-child(2) {
           background-image: url(assets/Carrusel-slider.blur.png);
