--- a/style.css
+++ b/style.css
@@ -229,29 +229,6 @@ svg {
   }
 }
 
-.btn-theme-dark {
-  display: flex;
-  padding: var(--box-8-9);
-  border-radius: 50%;
-  background-color: var(--bg-navbar);
-  outline: 0.5px solid var(--bg-navbar-borde);
-  box-shadow: var(--box-shadow-m);
-  transition: background-color var(--transition-s), outline var(--transition-s);
-
-  &:hover,
-  &:active {
-    background-color: var(--bg-btn-active);
-    outline: 0.5px solid var(--bg-btn-active-border);
-  }
-
-  .btn-light {
-    display: var(--show-sun);
-  }
-  .btn-dark {
-    display: var(--show-moon);
-  }
-}
-
 .btn-mode-dark:hover {
   filter: brightness(2);
 }
@@ -292,7 +269,7 @@ svg {
   gap: 1.5rem;
   transition: transform var(--transition-m);
 
-  & a:active {
+  a:active {
     transform: scale(1.05);
     background-color: var(--bg-btn-active);
     border: var(--bg-btn-active-border);
@@ -370,12 +347,6 @@ svg {
       padding: var(--box-16-18);
       margin-top: 32px;
 
-      /* & [required]:valid {
-        border-right: thin solid var(--form-ok-color);
-      }
-      & [required]:invalid {
-        border-right: thin solid var(--form-error-color);
-      } */
       .contact-form-error {
         font-size: 12px;
         text-wrap: pretty;
@@ -398,20 +369,20 @@ svg {
         transform: translateY(29px);
       }
 
-      & label {
+      label {
         display: flex;
         border-bottom: 1px solid var(--bg-navbar);
         &:focus ~ svg {
           color: var(--form-ok-color);
         }
 
-        & svg {
+        svg {
           min-width: 25px;
           color: #fff8;
           margin-bottom: 0.2rem;
         }
 
-        & input {
+        input {
           /* display: flex; */
           width: 100%;
           padding: 0.5rem 1rem 0.1rem;
@@ -419,17 +390,17 @@ svg {
           border: none;
           background-color: transparent;
           color: #fff;
-        }
 
-        & input[name="asunto"] {
-          padding: 0.5rem 0 0.3rem 0.3rem;
+          &[name="asunto"] {
+            padding: 0.5rem 0 0.3rem 0.3rem;
+          }
         }
         .contact-form-error {
           transform: translateY(32px);
         }
       }
 
-      & textarea {
+      textarea {
         font-family: inherit;
         font-size: var(--font-16);
         resize: none;
@@ -442,7 +413,7 @@ svg {
         color: #fff;
       }
 
-      & input[type="submit"] {
+      input[type="submit"] {
         font-family: var(--font);
         font-size: var(--font-16);
         margin-top: var(--box-16-18);
@@ -466,7 +437,7 @@ svg {
         .loader {
           text-align: center;
 
-          & span {
+          span {
             font-weight: bold;
             color: #f8f9fc;
           }
@@ -511,18 +482,16 @@ svg {
       background-color: #0005;
       box-shadow: var(--box-shadow-m);
 
-      & svg path {
+      svg path {
         fill: #f004;
       }
 
       &:hover,
       &:active {
-        background-color: #f004;
         background-color: #1009;
-        /* outline: 1.5px solid #f007; */
         outline: 1.5px solid red;
         box-shadow: none;
-        & svg path {
+        svg path {
           fill: red;
         }
       }
@@ -591,7 +560,6 @@ section > div:not(.proyecto-container) {
   }
   25% {
     scale: 50%;
-    background-color: red;
   }
   100% {
     opacity: 1;
@@ -603,7 +571,6 @@ section > div:not(.proyecto-container) {
 
 header {
   position: absolute;
-  /* z-index: 999; */
   inset: 0;
   height: 0px;
 
@@ -621,9 +588,6 @@ header {
 
 .menu {
   position: relative;
-  /* bottom: 0.5rem;
-  left: 0;
-  right: 0; */
   display: flex;
 
   .menu-nav {
@@ -644,7 +608,7 @@ header {
     background-color: var(--bg-navbar);
     backdrop-filter: saturate(200%) blur(10px);
 
-    & a {
+    a {
       display: flex;
       border-radius: 35px;
       transition: background-color var(--transition-s);
@@ -661,7 +625,7 @@ header {
       }
     }
 
-    & img {
+    img {
       padding: var(--box-8-9);
     }
   }
@@ -697,17 +661,16 @@ main > section {
       gap: 1rem;
       z-index: 1;
 
-      & h1 {
+      h1 {
         font-weight: bold;
         letter-spacing: -1px;
         color: var(--first-color);
         transform: translateY(50px);
         filter: blur(20px);
         opacity: 0;
-        /* animation: showContent 0.5s linear 1 forwards; */
         animation: showContent 0.5s ease-in 1 forwards;
       }
-      & h3 {
+      h3 {
         transform: translateY(50px);
         filter: blur(20px);
         opacity: 0;
@@ -717,7 +680,6 @@ main > section {
         transform: translateY(-30px);
         filter: blur(5px);
         opacity: 0;
-        /* animation: showContent 1s linear 1 forwards; */
         animation: showContent 0.3s ease-out 2s 1 forwards;
       }
     }
@@ -752,7 +714,6 @@ main > section {
     margin-left: 2rem;
     margin-right: 2rem;
     filter: var(--filter-logo);
-    /* animation: bounce-in-top 1.1s both 1.24s; */
     animation: bounce-in-top 1.1s both 1.5s;
   }
 }
@@ -821,7 +782,7 @@ main > section {
     gap: var(--box-16-18);
     background-image: var(--bg-footer);
 
-    & img {
+    img {
       max-width: 60%;
       --s: 10px;
       --f: 1; /* initial scale */
@@ -855,11 +816,10 @@ main > section {
       }
     }
     .about-text {
-      & h2 {
+      h2 {
         text-align: center;
-        /* padding-left: 1rem; */
       }
-      & p {
+      p {
         margin-top: 1rem;
         font-weight: 500;
       }
@@ -878,7 +838,7 @@ main > section {
     gap: var(--box-32-36);
 
     .skills-box {
-      & h2 {
+      h2 {
         text-align: center;
       }
       .skills-item {
@@ -888,7 +848,7 @@ main > section {
         margin-top: 1rem;
         gap: 1rem;
 
-        & img {
+        img {
           border-radius: var(--box-8-9);
           box-shadow: var(--box-shadow-icon-s);
           transition: box-shadow var(--transition-m),
@@ -901,21 +861,22 @@ main > section {
     }
   }
 }
+
 @keyframes nope {
   0% {
     transform: translateX(0);
   }
   6.5% {
-    transform: translateX(-4px) rotateY(-7deg);
+    transform: translateX(-3px) rotateY(-6deg);
   }
   18.5% {
-    transform: translateX(3px) rotateY(5deg);
+    transform: translateX(2px) rotateY(4deg);
   }
   31.5% {
-    transform: translateX(-1px) rotateY(-3deg);
+    transform: translateX(-0.5px) rotateY(-2deg);
   }
   43.5% {
-    transform: translateX(1px) rotateY(2deg);
+    transform: translateX(0.25px) rotateY(1deg);
   }
   50% {
     transform: translateX(0);
@@ -926,7 +887,7 @@ main > section {
   min-height: 100vh;
   flex-direction: column;
 
-  & h2 {
+  h2 {
     margin: auto;
   }
 
@@ -1037,7 +998,7 @@ main > section {
     gap: 8px;
     aspect-ratio: 1/0.8;
 
-    & button {
+    button {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -1054,48 +1015,49 @@ main > section {
       &:active {
         box-shadow: none;
       }
-
-      & img {
-        width: 30px;
+      &:nth-child(17) {
+        grid-column-start: 1;
+        grid-column-end: 3;
       }
-    }
+      &:nth-child(-n + 3) {
+        background-image: linear-gradient(140deg, #777, #fff);
+        box-shadow: inset 3px 3px 5px #fff9, inset -3px -3px 10px #fff9,
+          4px 4px 7px #000;
+        color: #000;
+        text-shadow: none;
 
-    & button:nth-child(17) {
-      grid-column-start: 1;
-      grid-column-end: 3;
-    }
-    & button:nth-child(-n + 3) {
-      background-image: linear-gradient(140deg, #777, #fff);
-      box-shadow: inset 3px 3px 5px #fff9, inset -3px -3px 10px #fff9,
-        4px 4px 7px #000;
-      color: #000;
-      text-shadow: none;
-
-      &:active {
-        box-shadow: none;
+        &:active {
+          box-shadow: none;
+        }
       }
-    }
-    & button:nth-child(4n),
-    & button:nth-child(19) {
-      background: linear-gradient(140deg, #038, #17f);
-      box-shadow: inset 3px 3px 5px #17f9, inset -3px -3px 10px #17f9,
-        4px 4px 7px #111;
+      &:nth-child(4n),
+      &:nth-child(19) {
+        background: linear-gradient(140deg, #038, #17f);
+        box-shadow: inset 3px 3px 5px #17f9, inset -3px -3px 10px #17f9,
+          4px 4px 7px #111;
 
-      &:active {
-        box-shadow: none;
+        &:active {
+          box-shadow: none;
+        }
       }
     }
   }
 }
 
 .qr-contenedor {
-  /* max-width: 400px; */
   height: fit-content;
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(to bottom, #a4e9 10%, #f5f5f7);
   box-shadow: 0 0px 14px #0005;
   border-radius: 20px;
+
+  .contenedorQR {
+    display: flex;
+    padding: 1rem;
+    justify-content: center;
+    aspect-ratio: 1;
+  }
 
   .qr-form {
     display: flex;
@@ -1108,7 +1070,7 @@ main > section {
       background-color: #2049;
     }
 
-    & input[type="text"] {
+    input[type="text"] {
       width: 100%;
       padding-left: 1rem;
       border: none;
@@ -1137,17 +1099,10 @@ main > section {
       &:hover {
         filter: brightness(1.1);
       }
-      & img {
+      img {
         width: 100%;
       }
     }
-  }
-
-  .contenedorQR {
-    display: flex;
-    padding: 1rem;
-    justify-content: center;
-    aspect-ratio: 1;
   }
 }
 
@@ -1158,16 +1113,17 @@ main > section {
   border-radius: 20px;
 
   .tags-title {
-    display: flex;
+    /* display: flex; */
     align-items: center;
     font-size: var(--font-20);
     font-weight: 500;
     margin-bottom: 1rem;
+    /* border: 10px solid red; */
 
-    & img {
-      width: 20px;
-      margin-left: 5px;
-      transform: translateY(5px);
+    svg {
+      width: 23px;
+      margin-left: 2px;
+      transform: translateY(2px);
     }
   }
 
@@ -1209,7 +1165,6 @@ main > section {
         width: 15px;
         height: 15px;
         background-image: url(assets/remove.svg);
-        /* background-image: url(assets/remove-2.svg); */
         background-size: cover;
         margin-left: 10px;
         cursor: pointer;
@@ -1257,7 +1212,7 @@ main > section {
     background-color: #fff;
     padding: 0.2rem;
 
-    & input {
+    input {
       width: 100%;
       resize: none;
       border: none;
@@ -1273,7 +1228,7 @@ main > section {
       }
     }
 
-    & i {
+    i {
       font-size: 35px;
       border: none;
       color: #f50;
@@ -1286,13 +1241,8 @@ main > section {
   }
 
   .seccion-tarea {
-    & h3 {
-      color: var(--white);
-      margin-bottom: 20px;
-    }
-
-    & ul {
-      & li {
+    ul {
+      li {
         display: grid;
         align-items: center;
         grid-template-columns: auto 1fr auto;
@@ -1303,7 +1253,7 @@ main > section {
         color: #111;
         background-color: #fff9;
 
-        & i {
+        i {
           font-size: 20px;
           padding: 0 0.5rem;
           color: #000;
@@ -1318,7 +1268,7 @@ main > section {
             }
           }
         }
-        & p {
+        p {
           overflow: hidden;
           font-size: 1rem;
         }
@@ -1346,11 +1296,11 @@ main > section {
     align-items: center;
     gap: 1rem;
   }
-  & small {
+  small {
     position: absolute;
     bottom: 4.5rem;
 
-    & a {
+    a {
       font-weight: bold;
       color: var(--link-color);
     }
@@ -1364,17 +1314,12 @@ main > section {
   border: 1px solid #17f6;
   box-shadow: 0 0 12px #0006, 0 0 5px var(--link-color) inset;
   border-radius: 25px;
-  /* transition: transform var(--transition-m); */
-
-  &:hover {
-    background-color: #17f5;
-  }
 
   &:active {
     opacity: 1;
     transform: scale(1.02);
   }
-  & svg {
+  svg {
     transition: fill var(--transition-m);
     margin-left: 0.5rem;
 
@@ -1388,10 +1333,11 @@ main > section {
   .contact-cv {
     &:hover {
       opacity: 1;
+      background-color: #17f5;
       transform: scale(1.02);
     }
 
-    & svg:hover {
+    svg:hover {
       fill: var(--link-color);
     }
   }
@@ -1401,7 +1347,7 @@ main > section {
     padding: 8px;
     gap: var(--box-16-18);
 
-    & a > img {
+    a > img {
       padding: var(--box-16-18);
       transform: scale(1.2);
     }
@@ -1412,13 +1358,10 @@ main > section {
   }
   .home-box,
   .contact-info {
-    & h1 {
+    h1 {
       font-size: var(--font-36);
     }
-    & h2 {
-      font-size: var(--font-32);
-    }
-    & h3 {
+    h3 {
       font-size: var(--font-24);
     }
     & .box-contact a > svg {
@@ -1470,7 +1413,7 @@ main > section {
     .menu-nav img {
       display: none;
     }
-    & a {
+    a {
       border-radius: 22px;
 
       &::before {
@@ -1533,8 +1476,7 @@ main > section {
       grid-template-rows: repeat(5, minmax(27px, 1fr));
       gap: 5px;
 
-      & button {
-        /* border-radius: 8px; */
+      button {
         font-size: var(--font-16);
       }
     }
@@ -1549,7 +1491,7 @@ main > section {
       font-size: var(--font-13);
     }
     .tags-input {
-      & ul {
+      ul {
         max-height: 333px;
       }
     }
