--- a/style.css
+++ b/style.css
@@ -646,7 +646,7 @@ main > section {
 
 .home {
   background-image: var(--bg-home);
-  min-height: 100vh;
+  min-height: 100svh;
 
   .home-box {
     display: flex;
@@ -884,7 +884,7 @@ main > section {
 }
 
 .project {
-  min-height: 100vh;
+  min-height: 100svh;
   flex-direction: column;
 
   h2 {
@@ -1284,7 +1284,7 @@ main > section {
 /* ***** apk ***** */
 
 .contact {
-  min-height: 100vh;
+  min-height: 100svh;
   position: relative;
   justify-content: center;
   align-items: center;
