Feat: se cargo página React

--- a/style.css
+++ b/style.css
@@ -919,7 +919,7 @@ main > section {
           background-image: url(assets/incluir-html-ajax.avif);
         }
         &:last-child {
-          background-image: url(assets/12\ Add\ Card\ Shopping.webp);
+          background-image: url(assets/e-commers.avif);
         }
         .link-title {
           width: 100%;
