--- a/style.css
+++ b/style.css
@@ -64,6 +64,9 @@
 }
 :root[data-theme="light"] {
   --text-icon-color: #1d1d1f;
+  --title-text-border: #f00;
+  --title-text: #f006;
+
   --filter-logo: invert(0.3);
   --show-sun: block;
   --show-moon: none;
@@ -87,6 +90,9 @@
 /* @media (prefers-color-scheme: dark) { */
 :root[data-theme="dark"] {
   --text-icon-color: #f8f9fc;
+  --title-text-border: #600;
+  --title-text: #f00;
+
   --filter-logo: invert(1);
   --show-sun: none;
   --show-moon: block;
@@ -158,7 +164,7 @@ h2 {
   font-family: var(--font);
   font-size: var(--font-24);
   color: var(--first-color);
-  -webkit-text-stroke: 0.5px red;
+  -webkit-text-stroke: 0.5px var(--title-text-border);
 }
 h3 {
   margin: 0;
@@ -669,18 +675,18 @@ main > section {
 
       h1 {
         font-weight: bold;
-        letter-spacing: -1px;
+        letter-spacing: -0.3px;
         color: var(--first-color);
-        transform: translateY(50px);
-        filter: blur(20px);
-        opacity: 0;
-        animation: showContent 0.5s ease-in 1 forwards;
+        text-shadow: -0.5px -0.5px 0px var(--title-text-border),
+          -0.5px 0.5px 0px var(--title-text-border),
+          0.5px 0.5px 0px var(--title-text-border),
+          0.5px -0.5px 0px var(--title-text-border), 0 0 10px var(--title-text);
       }
       h3 {
         transform: translateY(50px);
         filter: blur(20px);
         opacity: 0;
-        animation: showContent 0.5s linear 0.8s 1 forwards;
+        animation: showContent 0.5s linear 0.8s forwards;
       }
       & .box-contact {
         transform: translateY(-30px);
