--- a/style.css
+++ b/style.css
@@ -67,6 +67,9 @@
   --title-text-border: #f00;
   --title-text: #f006;
 
+  --sec-titulo-bg: #666;
+  --sec-titulo-shadow: #ddd;
+
   --filter-logo: invert(0.3);
   --show-sun: block;
   --show-moon: none;
@@ -92,6 +95,9 @@
   --text-icon-color: #f8f9fc;
   --title-text-border: #600;
   --title-text: #f00;
+
+  --sec-titulo-bg: #999;
+  --sec-titulo-shadow: #333;
 
   --filter-logo: invert(1);
   --show-sun: none;
@@ -164,7 +170,7 @@ h2 {
   font-family: var(--font);
   font-size: var(--font-24);
   color: var(--first-color);
-  -webkit-text-stroke: 0.5px var(--title-text-border);
+  /* -webkit-text-stroke: 0.5px var(--title-text-border); */
 }
 h3 {
   margin: 0;
@@ -214,6 +220,15 @@ svg {
 }
 
 /* ********** Components ********** */
+
+.title-mio {
+  -webkit-text-stroke: 0.1px var(--first-color);
+  font-family: "League Gothic";
+  font-size: 4.5rem;
+  text-transform: uppercase;
+  color: #f003;
+  letter-spacing: -0.3px;
+}
 
 ::-webkit-scrollbar {
   width: 0.5rem;
