Style: para que se vea en celular

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@
   --title-first-border: #600;
   --title-text: #f00;
   --title-second: #f003;
+  --title-second: #633;
 
   --filter-logo: invert(1);
   --show-sun: none;
