--- a/style.css
+++ b/style.css
@@ -8,6 +8,15 @@
   --form-error-color: #fc3d39;
   --opacity: 0.75;
 
+  --title-gradiente: linear-gradient(
+    to top,
+    #6001,
+    #600c,
+    #fc3d39,
+    #fc3d39,
+    #f00
+  );
+
   --bg-modal: #161617ee;
 
   --bg-modal-box: #fff3;
@@ -67,7 +76,6 @@
 
   --title-first-border: #f00;
   --title-first: #f006;
-  --title-second: #f008;
 
   --filter-logo: invert(0.3);
   --show-sun: block;
@@ -95,8 +103,6 @@
 
   --title-first-border: #600;
   --title-text: #f00;
-  --title-second: #f003;
-  --title-second: #633;
 
   --filter-logo: invert(1);
   --show-sun: none;
@@ -221,11 +227,15 @@ svg {
 
 .title-second {
   font-family: "League Gothic";
-  font-size: 4.5rem;
+  font-size: 7rem;
   text-transform: uppercase;
   letter-spacing: -0.3px;
-  color: var(--title-second);
-  -webkit-text-stroke: 0.1px var(--first-color);
+  -webkit-text-stroke: 0.1px #fff1;
+  background: var(--title-gradiente);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transform: translateY(40px);
 }
 
 ::-webkit-scrollbar {
@@ -848,6 +858,7 @@ main > section {
       p {
         margin-top: 1rem;
         font-weight: 500;
+        letter-spacing: 0.6px;
       }
     }
   }
@@ -864,9 +875,6 @@ main > section {
     gap: var(--box-32-36);
 
     .skills-box {
-      h2 {
-        text-align: center;
-      }
       .skills-item {
         display: flex;
         flex-wrap: wrap;
@@ -883,6 +891,9 @@ main > section {
             animation: nope 1s ease-in-out;
           }
         }
+      }
+      &:nth-child(2) h2 {
+        text-align: end;
       }
     }
   }
