Style: tamaño de letra

--- a/style.css
+++ b/style.css
@@ -228,8 +228,8 @@ svg {
 
 .title-second {
   font-family: "League Gothic";
-  /* font-size: 5rem; */
-  font-size: var(--step-title);
+  font-size: 5rem;
+  /* font-size: var(--step-title); */
   text-transform: uppercase;
   letter-spacing: -0.3px;
   -webkit-text-stroke: 0.1px #fff1;
@@ -1390,7 +1390,7 @@ main > section {
 }
 @media screen and (width > 768px) {
   .title-second {
-    /* font-size: 7rem; */
+    font-size: 7rem;
   }
 
   .menu {
@@ -1452,6 +1452,9 @@ main > section {
   }
 }
 @media screen and (width > 1024px) {
+  .title-second {
+    font-size: 7rem;
+  }
   .menu {
     .menu-nav {
       top: 10px;
