Fear: se agrego mi tema de VScode

--- a/style.css
+++ b/style.css
@@ -950,7 +950,7 @@ main > section {
         display: flex;
         align-items: end;
         overflow: hidden;
-        border-radius: 10px;
+        border-radius: 20px;
         aspect-ratio: 16/9;
         background-position: center;
         background-size: cover;
@@ -965,8 +965,11 @@ main > section {
         &:nth-child(3) {
           background-image: url(assets/e-commers.avif);
         }
-        &:last-child {
+        &:nth-child(4) {
           background-image: url(assets/blog.avif);
+        }
+        &:nth-child(5) {
+          background-image: url(assets/theme-fs.avif);
         }
         .link-title {
           width: 100%;
@@ -1499,6 +1502,11 @@ main > section {
       .proyecto-page {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: auto;
+
+        .box-img:nth-last-child(1):nth-child(odd) {
+          grid-column: span 2;
+        }
       }
       .proyecto-apk {
         grid-template-columns: repeat(4, 1fr);
