--- a/style.css
+++ b/style.css
@@ -971,6 +971,9 @@ main > section {
         &:nth-child(5) {
           background-image: url(assets/theme-fs.avif);
         }
+        &:nth-child(6) {
+          background-image: url(assets/crud.avif);
+        }
         .link-title {
           width: 100%;
           padding: 1rem;
