Style: se agrego base de estilos en archivo aparte

--- a/style.css
+++ b/style.css
@@ -1,228 +1,4 @@
-/* ********** Custom Properties ********** */
-:root {
-  --first-color: #fc3d39;
-  --first-alpha-color: #b70603;
-  --link-color: #147efb;
-  --link-alpha-color: #034ba0;
-  --form-ok-color: #53d769;
-  --form-error-color: #fc3d39;
-  --opacity: 0.75;
-
-  --title-gradiente: linear-gradient(
-    to top,
-    #6001,
-    #600c,
-    #fc3d39,
-    #fc3d39,
-    #f00
-  );
-
-  --bg-modal: #161617ee;
-
-  --bg-modal-box: #fff3;
-  --bg-modal-box-borde: #16161790;
-  --bg-modal-box-borde: #fff1;
-
-  /* --transition-s: 0.24s cubic-bezier(0, 0, 0.5, 1);
-  --transition-m: 0.3s cubic-bezier(0, 0, 0.5, 1);
-  --transition-xl: 0.24s cubic-bezier(0.4, 0, 0.6, 1); */
-  --transition-s: 0.24s cubic-bezier(0, 0, 1, 1);
-  --transition-m: 0.3s cubic-bezier(0.42, 0, 0.58, 1);
-  --transition-xl: 0.24s cubic-bezier(0.4, 0, 0.6, 1);
-
-  --font: "Inter", Helvetica, sans-serif;
-  --max-width: 1040px;
-  --header-height: 4rem;
-}
-/* * ROOT sizes */
-:root {
-  --step-title: clamp(3.2rem, 1.6875rem + 7.5vw, 7.5rem);
-  --font-64: clamp(3.875rem, 3.8295rem + 0.2273vw, 4rem);
-  --font-54: clamp(3.25rem, 3.1875rem + 0.3125vw, 3.375rem);
-  --font-48: clamp(2.875rem, 2.8295rem + 0.2273vw, 3rem);
-  --font-44: clamp(2.625rem, 2.5625rem + 0.3125vw, 2.75rem);
-  --font-36: clamp(2.125rem, 2.0625rem + 0.3125vw, 2.25rem);
-  --font-32: clamp(1.875rem, 1.8295rem + 0.2273vw, 2rem);
-  --font-24: clamp(1.375rem, 1.3125rem + 0.3125vw, 1.5rem);
-  --font-20: clamp(1.125rem, 1.0625rem + 0.3125vw, 1.25rem);
-  --font-16: clamp(0.875rem, 0.8125rem + 0.3125vw, 1rem);
-  --font-13: clamp(0.6875rem, 0.625rem + 0.3125vw, 0.8125rem);
-  --font-12: clamp(0.625rem, 0.5795rem + 0.2273vw, 0.75rem);
-  --font-11: clamp(0.5625rem, 0.5rem + 0.3125vw, 0.6875rem);
-  --font-9: clamp(0.4375rem, 0.392rem + 0.2273vw, 0.5625rem);
-  --font-8: clamp(0.375rem, 0.3295rem + 0.2273vw, 0.5rem);
-  --font-4: clamp(0.125rem, 0.0795rem + 0.2273vw, 0.25rem);
-
-  --box-4-5: clamp(0.25rem, 0.2222rem + 0.1389vw, 0.3125rem);
-  --box-8-9: clamp(0.5rem, 0.4722rem + 0.1389vw, 0.5625rem);
-  --box-12-14: clamp(0.75rem, 0.6944rem + 0.2778vw, 0.875rem);
-  --box-16-18: clamp(1rem, 0.9444rem + 0.2778vw, 1.125rem);
-  --box-24-27: clamp(1.5rem, 1.4167rem + 0.4167vw, 1.6875rem);
-  --box-32-36: clamp(2rem, 1.8889rem + 0.5556vw, 2.25rem);
-  --box-48-54: clamp(3rem, 2.8333rem + 0.8333vw, 3.375rem);
-  --box-64-72: clamp(4rem, 3.7778rem + 1.1111vw, 4.5rem);
-  --box-96-108: clamp(6rem, 5.6667rem + 1.6667vw, 6.75rem);
-
-  --space-4-9: clamp(0.25rem, 0.1111rem + 0.6944vw, 0.5625rem);
-  --space-8-14: clamp(0.5rem, 0.3333rem + 0.8333vw, 0.875rem);
-  --space-12-18: clamp(0.75rem, 0.5833rem + 0.8333vw, 1.125rem);
-  --space-16-27: clamp(1rem, 0.6944rem + 1.5278vw, 1.6875rem);
-  --space-24-36: clamp(1.5rem, 1.1667rem + 1.6667vw, 2.25rem);
-  --space-32-54: clamp(2rem, 1.3889rem + 3.0556vw, 3.375rem);
-  --space-48-72: clamp(3rem, 2.3333rem + 3.3333vw, 4.5rem);
-  --space-64-108: clamp(4rem, 2.7778rem + 6.1111vw, 6.75rem);
-}
-:root[data-theme="light"] {
-  --text-icon-color: #1d1d1f;
-
-  --title-first-border: #f00;
-  --title-first: #f006;
-
-  --filter-logo: invert(0.3);
-  --show-sun: block;
-  --show-moon: none;
-
-  --bg-body: #f8fbff;
-  --bg-home: linear-gradient(#d4d7db, transparent);
-  --bg-footer: linear-gradient(transparent, #d4d7db);
-  --bg-box: linear-gradient(160deg, transparent 30%, #d4d7db);
-
-  --bg-navbar: #f5f5f760;
-  --bg-navbar-borde: #f5f5f730;
-
-  --bg-btn-active: #0002;
-  --bg-btn-active-border: #0003;
-
-  --box-shadow-s: 0 0 6px #0003;
-  --box-shadow-m: 0 0 12px #0003;
-  --box-shadow-icon-s: 0 0 6px #0003;
-  --box-shadow-icon-m: 0 0 12px #0003;
-}
-/* @media (prefers-color-scheme: dark) { */
-:root[data-theme="dark"] {
-  --text-icon-color: #f8f9fc;
-
-  --title-first-border: #600;
-  --title-text: #f00;
-
-  --filter-logo: invert(1);
-  --show-sun: none;
-  --show-moon: block;
-
-  --bg-body: #2f3237;
-  --bg-home: linear-gradient(#111213, transparent);
-  --bg-footer: linear-gradient(transparent, #111213);
-  --bg-box: linear-gradient(160deg, transparent 30%, #111213);
-
-  --bg-navbar: #0006;
-  --bg-navbar-borde: #0003;
-
-  --bg-btn-active: #0009;
-  --bg-btn-active-border: #0003;
-
-  --box-shadow-s: 0 0 6px #0006;
-  --box-shadow-m: 0 0 12px #0006;
-  --box-shadow-icon-s: 0 0 6px #fff6;
-  --box-shadow-icon-m: 0 0 12px #fff6;
-}
-
-/* ********** Reset ********** */
-html {
-  box-sizing: border-box;
-  font-family: var(--font);
-  font-size: 16px;
-  scroll-behavior: smooth;
-}
-
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
-  transition: background-color var(--transition-s);
-}
-
-body {
-  overflow-x: hidden;
-  margin: 0;
-  padding: 0;
-  color: var(--text-icon-color);
-  background-color: var(--bg-body);
-  min-height: 100dvh;
-}
-
-a {
-  text-decoration: none;
-  transition: opacity var(--transition-s);
-
-  & svg {
-    fill: var(--text-icon-color);
-  }
-}
-
-@media (hover: hover) {
-  a:hover {
-    opacity: var(--opacity);
-  }
-}
-
-h1 {
-  font-family: var(--font);
-  font-size: var(--font-32);
-  margin: 0;
-  text-wrap: balance;
-}
-h2 {
-  margin: 0;
-  font-family: var(--font);
-  font-size: var(--font-24);
-  color: var(--first-color);
-}
-h3 {
-  margin: 0;
-  font-size: var(--font-20);
-}
-h4 {
-  margin: 0;
-  font-size: var(--font-16);
-}
-h5 {
-  margin: 0;
-  font-size: var(--font-13);
-}
-h6 {
-  margin: 0;
-  font-size: var(--font-11);
-}
-small {
-  margin: 0;
-  font-size: var(--font-11);
-}
-ul {
-  padding-left: 0;
-}
-li {
-  list-style: none;
-  font-size: var(--font-13);
-  line-height: 1.6;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-p {
-  margin: 0;
-  font-size: var(--font-16);
-  text-wrap: pretty;
-}
-
-button {
-  border: none;
-}
-svg {
-  transition: color var(--transition-m);
-}
+@import "./base-styles.css";
 
 /* ********** Components ********** */
 
@@ -232,7 +8,7 @@ svg {
   text-transform: uppercase;
   letter-spacing: -0.3px;
   -webkit-text-stroke: 0.1px #fff1;
-  background: var(--title-gradiente);
+  background-image: var(--title-gradiente);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -243,7 +19,7 @@ svg {
   width: 0.5rem;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #00000080;
+  background-color: #0008;
   border: 0.5px solid #ffffff66;
   border-radius: 8px;
 
